Fix for dark mode

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ html {
 }
 
 main {
-  background-color: white;
+  background-color: #242424;
   padding: 1em;
 }
 
@@ -174,6 +174,9 @@ button:disabled {
   }
   button {
     background-color: lightblue;
+  }
+  main {
+    background-color: white;
   }
 }
 
